--- a/.github/workflows/acme-tests.yml
+++ b/.github/workflows/acme-tests.yml
@@ -1,96 +1,16 @@
 name: ACME Tests
 
-on: [push, pull_request]
+on:
+  workflow_call:
 
 jobs:
-  init:
-    name: Initializing workflow
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.init.outputs.matrix }}
-      repo: ${{ steps.init.outputs.repo }}
-      db-image: ${{ steps.init.outputs.db-image }}
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
-
-      - name: Initialize workflow
-        id: init
-        env:
-          BASE64_MATRIX: ${{ secrets.BASE64_MATRIX }}
-          BASE64_REPO: ${{ secrets.BASE64_REPO }}
-          BASE64_DATABASE: ${{ secrets.BASE64_DATABASE }}
-        run: |
-          tests/bin/init-workflow.sh
-
-  # docs/development/Building_PKI.md
-  build:
-    name: Building PKI
-    needs: init
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
-    container: registry.fedoraproject.org/fedora:${{ matrix.os }}
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: |
-          dnf install -y dnf-plugins-core rpm-build moby-engine
-          dnf copr enable -y ${{ needs.init.outputs.repo }}
-          dnf builddep -y --allowerasing --spec ./pki.spec --nogpgcheck
-
-      - name: Build PKI packages
-        run: ./build.sh --with-pkgs=base,server,ca,acme --with-timestamp --work-dir=build rpm
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build runner image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          build-args: |
-            OS_VERSION=${{ matrix.os }}
-            COPR_REPO=${{ needs.init.outputs.repo }}
-          tags: pki-runner
-          target: pki-runner
-          outputs: type=docker,dest=pki-acme-runner.tar
-
-      - name: Store runner image
-        uses: actions/cache@v3
-        with:
-          key: pki-acme-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-runner.tar
-
-      - name: Build server image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          build-args: |
-            OS_VERSION=${{ matrix.os }}
-            COPR_REPO=${{ needs.init.outputs.repo }}
-          tags: pki-acme
-          target: pki-acme
-          outputs: type=docker,dest=pki-acme-server.tar
-
-      - name: Store server image
-        uses: actions/cache@v3
-        with:
-          key: pki-acme-server-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-server.tar
-
   # docs/installation/acme/Installing_PKI_ACME_Responder.md
   # docs/user/acme/Using_PKI_ACME_Responder_with_Certbot.md
   acme-certbot-test:
     name: Testing ACME with certbot
-    needs: [init, build]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -98,11 +18,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-acme-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-acme-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -111,7 +31,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ds.example.com
           PASSWORD: Secret.123
 
@@ -257,7 +177,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-server-${{ matrix.os }}
+          name: acme-server
           path: |
             /tmp/artifacts/pki
 
@@ -265,19 +185,16 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-client-${{ matrix.os }}
+          name: acme-client
           path: /tmp/artifacts/client
 
   # This test verifies that in a cluster the baseURL parameter can be used
   # to replace a server with another server without affecting the client.
   acme-switchover-test:
     name: Testing ACME server switchover
-    needs: [init, build]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -285,11 +202,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-acme-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-acme-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -298,7 +215,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ds.example.com
           PASSWORD: Secret.123
 
@@ -459,7 +376,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-switchover-server-${{ matrix.os }}
+          name: acme-switchover-server
           path: |
             /tmp/artifacts/pki
 
@@ -467,18 +384,15 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-switchover-client-${{ matrix.os }}
+          name: acme-switchover-client
           path: /tmp/artifacts/client
 
   # docs/installation/podman/Deploying_PKI_ACME_Responder_on_Podman.md
   acme-container-test:
     name: Testing ACME container
-    needs: [init, build]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -486,20 +400,20 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-acme-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-acme-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Retrieve server image
         uses: actions/cache@v3
         with:
-          key: pki-acme-server-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-acme-server.tar
+          key: pki-server
+          path: pki-server.tar
 
       - name: Load ACME image
-        run: docker load --input pki-acme-server.tar
+        run: docker load --input pki-server.tar
 
       - name: Create network
         run: docker network create example
@@ -509,7 +423,7 @@ jobs:
           docker run \
               --name server \
               --detach \
-              pki-acme
+              pki-server
 
       - name: Connect ACME container to network
         run: docker network connect example server --alias pki.example.com
@@ -588,12 +502,12 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-container-server-${{ matrix.os }}
+          name: acme-container-server
           path: /tmp/artifacts/server
 
       - name: Upload artifacts from client container
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: acme-container-client-${{ matrix.os }}
+          name: acme-container-client
           path: /tmp/artifacts/client
